# cinelyon

./: .env  .env.sample  .gitignore  DEPLOY_VERCEL.md  README.md  app.py  env  gitignore  movies.json  pyproject.toml  requirements.txt  scrape.py  tmdb_cache.json  vercel.json
.github/workflows/: quality.yml  scrape.yml
modules/: Classes.py
static/: manifest.json  sw.js
static/css/: main.css
templates/: base.html  index.html
tests/: test_basic.py
